Fix some layout issues with trend coltype

--- a/bi-platform-v2-plugin/cdf/js/addIns/coltypes.css
+++ b/bi-platform-v2-plugin/cdf/js/addIns/coltypes.css
@@ -1,6 +1,8 @@
 .trend {
   width: 10px;
   height: 10px;
+  display: inline-block;
+  margin-left: 5px;
 }
 .trend.up {
   background: url("img/up.png");
